--- a/web.html
+++ b/web.html
@@ -7,6 +7,9 @@
                 <h1>
                     Hola muy buenas chavos, que tal estan? 
                 </h1>
+                <h2>
+                    No olviden sonreir c:
+                </h2>
             </div>
         </body>
     </head>
